feat(csfloat): implement target price recommendation algorithm
- Add commons-math3 dependency for statistical calculations
- Implement TargetPriceRecommendation interface in CSFloatClient
- Calculate recommended target price based on listing analysis
- Refactor header management and API config handling
- Update client constructors to initialize config on creation
- Add new response DTOs for listing reference data
- Improve error handling and edge cases